# MPI-tgmtch-analyzer

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  output.rs
crates/hash-impl/og-hash/: Cargo.toml  build.rs
crates/hash-impl/og-hash/src/: lib.rs  og_hash.c
crates/hash/src/: lib.rs
crates/traceback/: Cargo.toml
crates/traceback/src/: lib.rs
crates/traceparsers/: Cargo.toml
crates/traceparsers/src/: dumpi_txt.rs  lib.rs
exampi/data/exampi/devx/: devx_1.txt  devx_128.txt
exampi/data/exampi/dpa/: dpa_nc_16_1.txt  dpa_nc_16_128.txt  dpa_nc_1_1.txt  dpa_nc_1_128.txt  dpa_nc_2_1.txt  dpa_nc_2_128.txt  dpa_nc_32_1.txt  dpa_nc_32_128.txt  dpa_nc_4_1.txt  dpa_nc_4_128.txt  dpa_nc_8_1.txt  dpa_nc_8_128.txt  dpa_wc_fp_16_1.txt  dpa_wc_fp_16_128.txt  dpa_wc_fp_1_1.txt  dpa_wc_fp_1_128.txt  dpa_wc_fp_2_1.txt  dpa_wc_fp_2_128.txt  dpa_wc_fp_32_1.txt  dpa_wc_fp_32_128.txt  dpa_wc_fp_4_1.txt  dpa_wc_fp_4_128.txt  dpa_wc_fp_8_1.txt  dpa_wc_fp_8_128.txt  dpa_wc_sp_16_1.txt  dpa_wc_sp_16_128.txt  dpa_wc_sp_1_1.txt  dpa_wc_sp_1_128.txt  dpa_wc_sp_2_1.txt  dpa_wc_sp_2_128.txt  dpa_wc_sp_32_1.txt  dpa_wc_sp_32_128.txt  dpa_wc_sp_4_1.txt  dpa_wc_sp_4_128.txt  dpa_wc_sp_8_1.txt  dpa_wc_sp_8_128.txt
exampi/data/exampi/mpi/: mpi_nc_1.txt  mpi_nc_128.txt  mpi_wc_1.txt  mpi_wc_128.txt
exampi/plots/: dpatm_utils.py  exampi_msgrate.py  generation.ipynb
scripts/: .gitignore  plots.ipynb  run.sh  stats.ipynb
