[package]
name = "mpi-tracesim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
traceparsers = { path = "../traceparsers" }
traceback = { path = "../traceback" }
og-hash = { path = "../hash-impl/og-hash" }

indicatif = "0.17.6"
clap = { version = "4.4.3", features = ["derive"] }
csv = "1.3.0"
bincode = "2.0.0-rc.3"
snap = "1.1.0"
